# operating-system-i

./: .gitignore  README.md
ics/ic1/: README.md  main.cpp
ics/ic2/: README.md
ics/ic4/: README.md  main.cpp
problem_solving/: CMakeLists.txt
problem_solving/booos/: CMakeLists.txt  README.md  main.cpp
problem_solving/booos/cmake/: git.cmake  setup.cmake
problem_solving/booos/src/core/: CMakeLists.txt  Queue.cc  Queue.h  Task.cc  Task.h
problem_solving/booos/tests/: CMakeLists.txt
problem_solving/booos/tests/core_tests/: CMakeLists.txt  queue_tests.cpp  task_tests.cpp
problem_solving/sp1_sudoku_validator/: .gitignore  CMakeLists.txt  README.md
problem_solving/sp1_sudoku_validator/src/validator/: CMakeLists.txt  sample1.cc  sample1.h  sudoku.cpp  sudoku.h
problem_solving/sp1_sudoku_validator/tests/: CMakeLists.txt
problem_solving/sp1_sudoku_validator/tests/validator_tests/: CMakeLists.txt  sample1_unittest.cc  sudoku_tests.cpp
problem_solving/sp2_memory_management/: MemoryManager.cpp  MemoryManager.h  README.md  Traits.h
problem_solving/sp3_process_and_threads/: README.md  TODO.md
problem_solving/sp3_process_and_threads/src/core/: Process.cpp  Process.h  Scheduler.cpp  Thread.cpp
problem_solving/sp3_process_and_threads/tests/core_tests/: CMakeLists.txt  core_tests.cpp
problem_solving/sp5_process_and_threads/: CMakeLists.txt  README.md
problem_solving/sp5_process_and_threads/src/core/: CMakeLists.txt  Process.cpp  Queue.cpp  Queue.h  Scheduler.cpp  Scheduler.h  Scheduling_Queue.cpp  Thread.cpp  Thread.h  TimerMediator.cpp
problem_solving/sudoku_validator/: CMakeLists.txt  README.md  main.cpp
problem_solving/sudoku_validator/cmake/: dependencies.cmake  gtest.cmake  setup.cmake
problem_solving/sudoku_validator/src/validator/: sudoku.cpp
problem_solving/sudoku_validator/tests/validator_tests/: CMakeLists.txt
software_implementations/implementation_1/: README.md
software_implementations/implementation_2/: README.md  main.cpp
software_implementations/implementation_3/: README.md  main.cpp
software_implementations/implementation_4/: README.md
software_implementations/implementation_5/: README.md  main.cpp
